force-app/main/default/objects/Deviation_Finding__c/Deviation_Finding__c.object-meta.xml
<CustomObject>
    <description>Detected behavioral drift with attribution. Private OWD: may contain customer utterances. Access via Apex managed sharing (FleetSharingService) or View All in Fleet_Administrator.</description>
    <label>Deviation Finding</label>
    <nameField>
        <label>Finding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deviation Findings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Fleet_Agent_Owner__c</fullName>
        <label>Fleet Agent Owner</label>
    </sharingReasons>
</CustomObject>