force-app/main/default/objects/Deviation_Finding__c/fields/Attributed_Change__c.field-meta.xml
<CustomField>
    <fullName>Attributed_Change__c</fullName>
    <label>Attributed Change</label>
    <type>Lookup</type>
    <referenceTo>Change_Event__c</referenceTo>
    <relationshipLabel>Attributed Findings</relationshipLabel>
    <relationshipName>AttributedFindings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>