force-app/main/default/objects/Deviation_Finding__c/fields/Attribution_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Confidence__c</fullName>
    <description>Confidence of the change attribution, 0.0 to 1.0.</description>
    <label>Attribution Confidence</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>