force-app/main/default/objects/Deviation_Finding__c/fields/Cases_Failing__c.field-meta.xml
<CustomField>
    <fullName>Cases_Failing__c</fullName>
    <label>Cases Failing</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>