force-app/main/default/objects/Deviation_Finding__c/fields/Closed_At__c.field-meta.xml
<CustomField>
    <fullName>Closed_At__c</fullName>
    <label>Closed At</label>
    <type>DateTime</type>
</CustomField>