force-app/main/default/objects/Deviation_Finding__c/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <label>Closed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deviation Findings Closed</relationshipLabel>
    <relationshipName>DeviationFindingsClosed</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>