force-app/main/default/objects/Deviation_Finding__c/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>False_Positive</fullName>
                <label>False Positive</label>
            </value>
            <value>
                <fullName>Wont_Fix</fullName>
                <label>Won't Fix</label>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Auto_Closed</fullName>
                <label>Auto Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>