force-app/main/default/objects/Deviation_Finding__c/fields/Detector__c.field-meta.xml
<CustomField>
    <fullName>Detector__c</fullName>
    <description>Matches Fleet_Drift_Detector__mdt.Detector_Key__c.</description>
    <label>Detector</label>
    <type>Text</type>
    <length>80</length>
</CustomField>