force-app/main/default/objects/Deviation_Finding__c/fields/Finding_Number__c.field-meta.xml
<CustomField>
    <fullName>Finding_Number__c</fullName>
    <label>Finding Number</label>
    <type>AutoNumber</type>
    <displayFormat>F-{00000}</displayFormat>
</CustomField>