force-app/main/default/objects/Deviation_Finding__c/fields/Fleet_Agent__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Agent__c</fullName>
    <label>Fleet Agent</label>
    <type>Lookup</type>
    <referenceTo>Fleet_Agent__c</referenceTo>
    <relationshipLabel>Deviation Findings</relationshipLabel>
    <relationshipName>DeviationFindings</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>